--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "notification",
+  "name": "js-window-notification",
   "homepage": "https://github.com/dandanlady/notification",
   "authors": [
     "dandan <dandan@turingcat.com>"
